# backend

./: .env.prod  .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/core/: settings.py
