[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for Diplom work (Hennadii Kochev)"
authors = ["genndy007 <kochevgenazp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
